# Genetic_Algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Individual.h  Population.h
src/: Individual.cpp  Population.cpp  main.cpp
